<resources>
    <string name="app_name">Project Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculator</string>
    <string name="nav_header_subtitle">binh9adt@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_doicoso">Đổi cơ số</string>
    <string name="menu_doidonvi">Đổi đơn vị</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_refresh">Làm mới</string>
    <string name="text_reset">Xóa</string>
    <string name="btn_back">Back</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_recognize">Recognize</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_submit">Submit</string>

    <string name="facebook_app_id">2492502114329591</string>
    <string name="text_share">Chia sẻ ứng dụng tới:</string>
    <string name="btn_shareFB">Facebook</string>
    <string name="text_recognize_result">Recognize result</string>
    <string name="btn_reset">Reset</string>
    <string name="text_history">Lịch sử tính toán</string>
</resources>
